--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 markdown: redcarpet
 permalink: /:title.html
-exclude: [logo.psd, logo2.psd, ninerobot.psd, server.cfg]
+exclude: [README.md, logo.psd, logo2.psd, ninerobot.psd, server.cfg]
